# metasqueeze-model

./: .gitignore  CMakeLists.txt  README.md  functions.sh  job_metasqueeze.sh  makefile
data/in/climate/: baseline_cali_1998_2006.csv
data/in/dispersal/: dispersal_baseline.csv  dispersal_current.csv  dispersal_none.csv
data/in/fire/: fire.csv
data/in/flower_distributions/: flower_distributions_current.csv
data/in/fuzzy_sets/: fuzzy_set_01.csv  fuzzy_set_02_low.csv  fuzzy_set_03_high.csv  fuzzy_set_list.csv
data/in/habitat_quality/: habitat.csv
data/in/metapopulation/: metapop_baseline.csv  metapop_baseline_high.csv  metapop_baseline_medium.csv  metapop_cali_02.csv  metapop_cali_03_mort_scn_0.csv  metapop_cali_03_mort_scn_2.csv  metapop_cali_03_mort_scn_3_4.csv  metapop_only_one.csv
data/in/plant_types/: plant_types.csv  plant_types_12.csv  plant_types_15.csv  plant_types_18.csv  plant_types_21.csv  plant_types_24.csv  plant_types_27.csv  plant_types_3.csv  plant_types_6.csv  plant_types_9.csv
data/in/scenarios/: .~lock.scn_baseline.csv#  scn_baseline.csv  scn_cali_01.csv  scn_cali_02_mort_0.csv  scn_cali_02_mort_2.csv  scn_cali_02_mort_3.csv  scn_cali_02_mort_4.csv  scn_cali_03_mort_0.csv  scn_cali_03_mort_2.csv  scn_cali_03_mort_3.csv  scn_cali_03_mort_4.csv  scn_current.csv
data/in/species/: banksia_base_90_mort_0.csv  banksia_base_90_mort_1.csv  banksia_base_90_mort_2.csv  (+4 more)
src/: cell.h  cohort.cpp  cohort.h  dispersal.h  environment.cpp  environment.h  equation.cpp  equation.h  fire_simulator.cpp  fire_simulator.h  flower_distribution.h  fuzzy_function.cpp  fuzzy_function.h  gene_flow.h  global.h  grid.cpp  grid.h  habitat_quality.h  main.cpp  model_options.h  output.cpp  output.h  parameter_reader.cpp  parameter_reader.h  parameters.h  plant.cpp  plant.h  plant_type.h  point.h  population.cpp  population.h  random_generator.h  trapezoid.cpp  trapezoid.h  triangle.cpp  triangle.h  weather_simulator.cpp  weather_simulator.h  wind_simulator.cpp  wind_simulator.h
tools/: .gitignore  README.md
tools/data_analysis_visualization/: README.md  calibration_and_analysis.qmd
tools/experiment_generator/: README.md  experiment_generator.R  sensitivity_generator.R
tools/parallel/: meta-parallel.R
(+228 files in other folders)
